# mam-pivko

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: backend.yml  pages.yml
backend/: .env.example  Makefile  Procfile  pyproject.toml
backend-worker/: .dev.vars.example  CLOUDFLARE.md  package-lock.json  package.json  wrangler.jsonc
backend-worker/migrations/: 0001_initial_schema.sql  0002_sessions.sql
backend-worker/scripts/: export-atlas-to-d1-sql.mjs
backend-worker/src/: index.ts
backend/src/mam_pivko/: config.py  db.py  main.py
backend/src/mam_pivko/api/: app.py  auth.py  events.py  wishlist.py
backend/src/mam_pivko/models/: common.py  event.py  wishlist.py
backend/src/mam_pivko/services/: event_service.py  utils.py  wishlist_service.py
backend/tests/: conftest.py  test_events.py  test_wishlist.py
design_handoff_mam_pivko/: Mam Pivko.html  README.md  app.css  app.jsx  data.jsx  detail.jsx  form.jsx  list.jsx  shell.jsx  wishlist.jsx
design_handoff_mam_pivko/ds/: colors_and_type.css
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AuthContext.jsx  api.js  index.css  main.jsx
frontend/src/components/: EventDetail.jsx  EventDetail.module.css  EventForm.jsx  EventForm.module.css  EventList.jsx  EventList.module.css  EventPubMap.jsx  EventPubMap.module.css  LoadingMessage.jsx  MapyLink.jsx  MapySearchField.jsx  MapySearchField.module.css  WishlistPage.jsx  WishlistPage.module.css
frontend/src/design/: Design.jsx  app.css  helpers.js
frontend/src/utils/: format.js
(+1 files in other folders)
